fixed some spacing

--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ body {
 	font-family: 'DM Sans', Arial, sans-serif;
 	color: #323232;
 	line-height: 1.7em;
-	letter-spacing: 0.5px;
+	letter-spacing: 0.25px;
 
 	font-size: 13pt;
 	margin: 0;
@@ -136,8 +136,8 @@ h2 {
 	font-size:16pt;
 	font-family: 'DM Mono', monospace;
 	font-weight: 500;
-    line-height: 1.5em;
-
+    line-height: 1.7em;
+	letter-spacing: 0px;
     max-width: 700px;
     margin-top:0px;
 }
@@ -146,8 +146,7 @@ h3{
 	font-size: 16pt;
 	font-family: 'DM Mono', monospace;
     font-weight: 500;
-    line-height: 1.5em;
-  
+  	letter-spacing: 0px;
     margin-bottom: 0px;
 	margin-top: 90px;
 }
@@ -176,9 +175,8 @@ h3{
 
 
 #content div {
-/*  margin-top: 20px;
-*/}
-/*this was bigger because I had wavy text stuff and arbutus. no more */
+  margin-top: 20px;
+}
 
 
 #content img{
